--- a/index.html
+++ b/index.html
@@ -20,15 +20,43 @@
         <section>
             <ul>
                 <li>
-                    <img src="./assets/images/Creme Expert Absolut.webp" alt="Creme Profissional Absolut ">
+                    <img src="./assets/images/Creme Expert Absolut.webp" alt="Creme Profissional Expert Absolut Repair Cortex Lipidium">
+                    <span>L'Oréal Professional Expert Absolut Repair Cortex Lipidium</span>
+                    <b>R$ 225,90</b>
+                </li>
+                <li>
+                    <img src="./assets/images/carolina-herrera-good-girl-edp-30ml.jpg" alt="Good Girl Carolina Herrera Eau de Parfume - Perfume Feminino 30ml">
+                    <span>Good Girl Carolina Herrera Eau de Parfume - Perfume Feminino 30ml</span>
+                    <b>R$ 299,00</b>
+                </li>
+                <li>
+                    <img src="./assets/images/mascara-capilar.webp" alt="Senscience Inner Restore Intensif - Máscara Capilar 50ml">
+                    <span>Senscience Inner Restore Intensif - Máscara Capilar 50ml</span>
+                    <b>R$ 99,90</b>
                 </li>
             </ul>
         </section>
 
         <section>
             <ul>
-                <li></li>
+                <li>
+                    <h5>Produtos</h5>
+                    <span>R$ 624,80</span>
+                </li>
+                <li>
+                    <h5>Frete</h5>
+                    <span>R$ 5,30</span>
+                </li>
+                <li>
+                    <h5>Desconto</h5>
+                    <span>R$ 30,00</span>
+                </li>
+                <li>
+                    <h5>Total</h5>
+                    <span>R$ 600,10</span>
+                </li>
             </ul>
+            <button>Seguir para o Pagamento</button>
         </section>
     </main>
 
