--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
               <span>R$ 5,30</span>
             </li>
             <li>
-              <h5>Desconto</h5>
-              <span>R$ 30,00</span>
+              <h5 class="desconto">Desconto</h5>
+              <span class="desconto">R$ 30,00</span>
             </li>
-            <li>
+            <li class="total">
               <h5>Total</h5>
               <span>R$ 600,10</span>
             </li>
